# zbbm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: banner.hpp  book.hpp  book_manager.h  ui.h  user_interface.hpp  utils.hpp
src/: book_manager.cpp  main.cpp  ui.cpp  utils.cpp
test/: CMakeLists.txt  book_manager_test.cpp  zbbm_bookmgr_test.cpp  zbbm_bookmgr_test.hpp  zbbm_test.cpp  zbbm_utils_test.hpp
